checkdoc and package-lint checks

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 111d5caeaa1f2ac98d0075926b241b1ea695da2f7349d99bbbee3b3cfa994655; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: bf05d0dbb29baffc152f6b2248b70b3a50df262fc794534ea904e3b9d2bf6f92; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an Org file using file local variables
 #+options: num:nil \n:nil
@@ -500,6 +500,10 @@ that they are trying to load.
 #+begin_src elisp :eval never :noweb yes
 ;;;###autoload
 (defun orgstrap--confirm-eval-portable (lang _body)
+  "A backwards compatible, portable implementation for confirm-eval.
+This should be called by `org-confirm-babel-evaluate'.  As implemented
+the only LANG that is supported is emacs-lisp or elisp.  The argument
+_BODY is rederived for portability and thus not used."
   ;; `org-confirm-babel-evaluate' will prompt the user when the value
   ;; that is returned is non-nil, therefore we negate positive matchs
   (not (and (member lang '("elisp" "emacs-lisp"))
@@ -571,7 +575,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 111d5caeaa1f2ac98d0075926b241b1ea695da2f7349d99bbbee3b3cfa994655; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: bf05d0dbb29baffc152f6b2248b70b3a50df262fc794534ea904e3b9d2bf6f92; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -670,6 +674,9 @@ of any changes.
 #+begin_src elisp :noweb yes
 (require 'cl-lib)
 
+(defvar orgstrap-mode nil
+  "Variable to track whether `orgstrap-mode' is enabled.")
+
 (defvar orgstrap-orgstrap-block-name "orgstrap"
   "Set the default blockname to orgstrap by convention.
 This makes it easier to search for orgstrap if someone encounters
@@ -682,16 +689,21 @@ an orgstrapped file and wants to know what is going on.")
   "Local variable for the cypher for the current buffer.
 If you change `orgstrap-default-cypher' you should update this as well
 using `setq-default' since it will not change automatically.")
-(put 'orgstrap-cypher 'safe-local-variable (lambda (value) t))
+(put 'orgstrap-cypher 'safe-local-variable (lambda (v) (ignore v) t))
 
 (defvar-local orgstrap-block-checksum nil
   "Local variable for the expected checksum for the current orgstrap block.")
-(put 'orgstrap-cypher 'safe-local-variable (lambda (value) t))
+(put 'orgstrap-cypher 'safe-local-variable (lambda (v) (ignore v) t))
+
+(defconst orgstrap--internal-norm-funcs
+  '(orgstrap-norm-func--prp-1.0)
+  "List internally implemented normalization functions.
+Used to determine which norm func names are safe local variables.")
 
 (defvar-local orgstrap-norm-func-name nil
   "Local variable for the name of the current orgstrap-norm-func.")
 (put 'orgstrap-norm-func-name 'safe-local-variable
-     (lambda (value) (and orgstrap-mode (memq value orgstrap--known-norm-funcs)))) ;; FIXME naming
+     (lambda (value) (and orgstrap-mode (memq value orgstrap--internal-norm-funcs))))
 ;; Unless orgstrap-mode is enabled and the name is in the list of
 ;; functions that are implemented internally this is not safe
 
@@ -702,18 +714,16 @@ Defaults to `orgstrap-norm-func--prp-1.0'.")
 (defvar orgstrap--debug nil
   "If non-nil run `orgstrap-norm' in debug mode.")
 
+(defcustom orgstrap-always-edit nil
+  "If non-nil then command `orgstrap-mode' will activate command `orgstrap-edit-mode'."
+  :type 'boolean
+  :group 'orgstrap)
+
 ;; orgstrap run helpers
 
 <<orgstrap-portable-confirm-eval>>
 
 ;; orgstrap-mode implementation
-
-(defvar orgstrap-mode nil "Variable to track whether `orgstrap-mode' is enabled.")
-
-(defcustom orgstrap-always-edit nil
-  "If non-nil then command `orgstrap-mode' will activate command `orgstrap-edit-mode'."
-  :type 'boolean
-  :group 'orgstrap)
 
 (defun orgstrap--org-buffer ()
   "Only run when in `org-mode' and command `orgstrap-mode' is enabled.
@@ -723,8 +733,8 @@ Sets further hooks."
 
 (defun orgstrap--hack-lv-confirm (command &rest args)
   "Advise `hack-local-variables-confirm' to remove orgstrap eval variables.
-COMMAND should be `hack-local-variables-confirm' with ARGS
-(all-vars unsafe-vars risky-vars dir-name)."
+COMMAND should be `hack-local-variables-confirm' with ARGS (all-vars
+unsafe-vars risky-vars dir-name)."
   (advice-remove #'hack-local-variables-confirm #'orgstrap--hack-lv-confirm)
   (cl-destructuring-bind (all-vars unsafe-vars risky-vars dir-name)
       ;; emacs 28 doesn't alias the non cl- prefixed form so use unaliased?
@@ -790,9 +800,10 @@ Avoid false positives if possible if at all possible."
   "A regional minor mode for `org-mode' that automatically runs orgstrap blocks.
 When visiting an Org file or activating `org-mode', if orgstrap prop line local
 variables are detect then use the installed orgstrap implementation to run the
-orgstrap block. If orgstrap embedded local variables are present, they will not
-be executed. `orgstrap-mode' is not a normal minor mode since it does not run
-any hooks and when enabled only adds a function to `org-mode-hook'."
+orgstrap block.  If orgstrap embedded local variables are present, they will not
+be executed.  `orgstrap-mode' is not a normal minor mode since it does not run
+any hooks and when enabled only adds a function to `org-mode-hook'.  ARG is the
+universal prefix argument."
   (interactive "P")
   (ignore arg)
   (let ((turn-on (not orgstrap-mode)))
@@ -1155,20 +1166,12 @@ buffer or global setting for `orgstrap-norm-func'."
                     info
                     minimal))
           (lv-ecom (orgstrap--local-variables--eval-common)))
-      (let ((lv-commands (orgstrap--dedoc (append lv-cver lv-norm lv-ncom lv-eval lv-ecom)))
+      (let ((lv-command (orgstrap--dedoc (append '(progn) lv-cver lv-norm lv-ncom lv-eval lv-ecom)))
             (commands-existing (mapcar #'cdr (cl-remove-if-not (lambda (l) (eq (car l) 'eval)) elv)))) ;(ref:clrin)
-        (cond ((equal commands-existing lv-commands) nil)
-              ((not commands-existing)
-               (let ((print-escape-newlines t))  ; needed to preserve the escaped newlines
-                 ' ; one sexp per eval line, too hard to manage switching it out
-                 (mapcar (lambda (sexp) (add-file-local-variable 'eval sexp)) lv-commands)
-                 ;; easier to put it all in a single progn that we can id and swap
-                 ;; yes it is harder to read, but that is why we have all the docs
-                 ;; FIXME detect if orgstrap-global-mode is enabled and do nothing
-                 (add-file-local-variable 'eval (cons 'progn lv-commands))))
-              ;; we could try to do something fancy here, but it is much simpler
-              ;; to just alert the user and have them fix it than trying to guess
-              (t (error "Existing eval commands that do not match the commands to be installed have been detected.  Please remove those commands and run `orgsrap-add-file-local-variables' again or manually add the orgstrap file local variables.  The existing commands are as follows.\n%s" commands-existing)))))))
+        (let (eval-commands (cons lv-command (cl-remove-if-not #'orgstrap--match-eval-local-variables commands-existing)))
+          (when commands-existing
+            (delete-file-local-variable 'eval))
+          (mapcar (lambda (sexp) (add-file-local-variable 'eval sexp)) eval-commands))))))
 
 ;; init user facing functions
 ;;;###autoload
@@ -1206,9 +1209,16 @@ the minimal local variables will be used if possible."
 
 ;; leaving out the -on-open from these vars to reduce typing
 ;; since these will be used repeatedly
-(defvar orgstrap-tangle nil "Dynamic variable that by convention can be used inside orgstrap blocks to make it possible to run `org-babel-tangle' only when it is non-nil when set on the command line when launching emacs with --batch. Individual orgstrap blocks should also define (defvar orgstrap-on-tangle-open nil) if they want this functionality.")
+(defvar orgstrap-tangle nil
+  "Dynamic variable that by convention can be used inside orgstrap blocks.
+It makes it possible to run `org-babel-tangle' only when it is non-nil when set
+on the command line when launching Emacs with --batch.  Individual orgstrap
+blocks should also define (defvar orgstrap-on-tangle-open nil) if they want
+this functionality.")
 
-(defvar orgstrap-test nil "Dynamic variable used to control whether to run any tests that are embedded in an orgstrap file. If non-nil then load the orgstrap block and run tests.")
+(defvar orgstrap-test nil
+  "Variable to control whether to run tests embedded in an orgstrap file.
+If non-nil then load the orgstrap block and run tests.")
 ;; Running tests via a batch process can be a bit tricky if the test code is also part of the orgstrap block.
 
 (defun orgstrap-update-src-block (name content)
@@ -1425,6 +1435,24 @@ emacs-28-vcs -q orgstrap-minimal.org
 (message "orgstrap successful")
 ,#+end_src
 <<local-variables-minimal-example>>
+#+end_src
+
+Before running the tests below you need to generate [[file:./orgstrap-autoloads.el]].
+Newer version of =autoload-generate-file-autoloads= add functions that may not be
+supported by older versions of Emacs. Thus you should run this on the oldest version
+of Emacs you will be testing against.
+
+#+name: generate-autoloads-for-test
+#+begin_src elisp :results none
+(require 'autoload)
+(with-current-buffer (find-file-noselect "orgstrap-autoloads.el")
+  (erase-buffer)
+  (let* ((cb (current-buffer))
+         (fn (buffer-file-name cb))
+         (generated-autoload-file fn))
+    (autoload-generate-file-autoloads "orgstrap.el" cb fn))
+  (save-buffer)
+  (kill-buffer))
 #+end_src
 
 # XXX note that you cannot use append t with add-to-list for local variables
